Update titanic survival predictions.ipynb

--- a/titanic survival predictions.ipynb
+++ b/titanic survival predictions.ipynb
@@ -19,8 +19,8 @@
    "outputs": [],
    "source": [
     "# Import files\n",
-    "test = pd.read_csv('/Users/dgrijalva/kaggle/Titanic/data/test.csv')\n",
-    "train = pd.read_csv('/Users/dgrijalva/kaggle/Titanic/data/train.csv')"
+    "test = pd.read_csv('../kaggle/Titanic/data/test.csv')\n",
+    "train = pd.read_csv('../kaggle/Titanic/data/train.csv')"
    ]
   },
   {
